--- a/index.Rmd
+++ b/index.Rmd
@@ -26,7 +26,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ------------------------------------------------------------------------
 
-`r fontawesome::fa("at")` [marcellgranat/big_data2022](https://github.com/MarcellGranat/big_data2022)
+`r fontawesome::fa("at")` [granat.marcell@uni-neumann.hu](mailto:granat.marcell@uni-neumann.hu)
 
 `r fontawesome::fa("github")` [marcellgranat/big_data2022](https://github.com/MarcellGranat/big_data2022)
 
