--- a/introduction-to-statistics.Rmd
+++ b/introduction-to-statistics.Rmd
@@ -29,12 +29,32 @@ class: inverse, center, middle
 strong { color: red; }
 a { color: #378C95; font-weight: bold; }
 .remark-inline-code { font-weight: 900; background-color: #a7d5e7; }
+.caption { color: #378C95; font-style: italic; text-align: center; }
+
+.content-box { 
+box-sizing: content-box;
+background-color: #378C95;
+/* Total width: 160px + (2 * 20px) + (2 * 8px) = 216px
+Total height: 80px + (2 * 20px) + (2 * 8px) = 136px
+Content box width: 160px
+Content box height: 80px */
+}
+
+.content-box-green {
+background-color: #d9edc2;
+}
+
+.content-box-red {
+background-color: #f9dbdb;
+}
 
 ```
 
 ```{r xaringan-themer, include=FALSE, warning=FALSE}
 library(xaringanthemer)
 library(tidyverse)
+library(knitr)
+library(granatlib)
 library(emo)
 style_mono_accent(
   base_color = "#DC322F",               # bright red
@@ -54,6 +74,7 @@ xaringanExtra::use_tile_view()
 
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
+knitr::opts_chunk$set(echo = FALSE, fig.align = "center")
 ```
 
 
@@ -66,9 +87,7 @@ class: left
 
 1. Basic concepts of **statistical analysis** `r ji("hatching")`
 
-2. Introduction and recommendations of **databases** for your future projects
-
-3. Descriptive statistics `r ji("bar_chart")`
+2. Descriptive statistics `r ji("bar_chart")`
 
 ### Session 2 - Introduction to R
 
@@ -79,6 +98,154 @@ class: left
 3. Conditional statements, loops `r ji("infinity")`
 
 4. **Fun**ctions `r ji("hugging")` , apply
+
+---
+
+class: middle, center, inverse
+
+# The type of data
+
+---
+
+# Classification based on the structure
+
+1. Unstructured
+
+2. Structured
+
+--
+
+- The data are stored in a tabular format.
+
+- Cross-sectional / Time-series / Longitudinal / Spatial / Network
+
+--
+
+```{r out.height="250px", out.width="530px"}
+include_graphics("introduction-to-statistics_files/attributes_observations.png")
+```
+
+
+
+**Type of data determines which tools and techniques can be used to analyze the data!**
+
+--
+
+```{r}
+attribute_types <- tibble::tribble(
+     ~`Attribute type`,                                                                                                                                                      ~Description,                                                                                   ~Examples,                                                       ~Operations,
+           "Nominal", "Nominal values provide only enough information to distinguish one object from another. (=, ≠)",                                         "Zip codes, employee ID numbers, eye color, gender",                 "Mode, entropy, contingency correlation, $\\chi^2$ test",
+           "Ordinal",                                                                                 "The values of an ordinal attribute provide enough information to order objects. (<, >)",                        "Hardness of minerals, {good, better, best}, grades, street numbers",    "Quantiles, rank correlation",
+          "Interval",                                                     "Differences between values are meaningful, i.e., a unit of measurement exists. (+, -)",                                      "Calendar dates, temperature in Celsius or Fahrenheit",  "mean, standard deviation, Pearson's correlation",
+             "Ratio",                                                                                                "For ratio variables, both differences and ratios are meaningful. (*, /)", "Temperature in Kelvin, monetary quantities, counts, age, mass, length, electrical current",                "Geometric mean, harmonic mean, percent variation"
+     )
+```
+
+
+```{r results='asis'}
+for (i in 1:4) {
+  cat("---")
+  cat("\n")
+  attribute_types %>% 
+    head(i) %>% 
+    kable(escape = FALSE, format = "html") %>% 
+    cat()
+  cat("\n")
+}
+```
+
+
+???
+
+ref: Introduction to Data Mining
+
+---
+
+class: inverse, middle, center
+
+# Quality of data
+
+---
+
+background-image: url("introduction-to-statistics_files/meme_clean_data.jpg")
+
+???
+
+source: Statsystem
+
+---
+
+# The quality of data
+
+Data is often far from perfect.
+
+Frequently arising issues:
+
+--
+
+- missing data
+
+--
+
+
+- outliers
+
+--
+
+- duplication
+
+--
+
+- inconsistent data
+
+---
+
+## An illlustrative story of data-related issues
+
+.blue[Statistician:] So, you got the data for all the patients?
+
+.blue[Data Miner:] Yes. I haven't had much time for analysis, but I do have a few interesting results.
+
+.blue[Statistician:] Amazing. There were so many data issues with this set of patients that I couldn't do much.
+
+.blue[Data Miner:] Oh? I didn't hear about any possible problems. 
+
+.blue[Statistician:] Well, first there is field 5, the variable we want to predict. It's common knowledge among people who analyze this type of data that results are better if you work with the log of the values, but I didn't discover this until later. Was it mentioned to you?
+
+.blue[Data Miner:] No.
+
+.footnote[*Introduction to Data Mining, page 21-22*]
+
+---
+
+## An illlustrative story of data-related issues
+
+.blue[Statistician:] But surely you heard about what happened to field 4? It's supposed to be measured on a scale from 1 to 10, with 0 indicating a missing value, but because of a data entry error, all 10's were changed into 0's. Unfortunately, since some of the patients have missing values for this field, it's impossible to say whether a 0 in this field is a real 0 or a 10. Quite a few of the records have that problem.
+
+.blue[Data Miner:] Interesting. Were there any other problems? .blue[Statistician:] Yes, fields 2 and 3 are basically the same, but I assume that you probably noticed that.
+
+.blue[Data Miner:] Yes, but these fields were only weak predictors of field 5.
+
+.blue[Statistician:] Anyway, given all those problems, I'm surprised you were able to accomplish anything.
+
+.blue[Data Miner:] True, but my results are really quite good. Field 1 is a very strong predictor of field 5. I'm surprised that this wasn't noticed before.
+
+.footnote[*Introduction to Data Mining, page 21-22*]
+
+---
+
+## An illlustrative story of data-related issues
+
+.blue[Statistician:] What? Field 1 is just an identification number. 
+
+.blue[Data Miner:] Nonetheless, my results speak for themselves.
+
+
+.blue[Data Miner:] Nonetheless, my results speak for themselves. 
+
+.blue[Statistician:] Oh, no! I just remembered. We assigned ID numbers after we sorted the records based on field 5. There is a strong connection, but it's meaningless. Sorry.
+
+.footnote[*Introduction to Data Mining, page 21-22*]
 
 ---
 
